--- a/orchestration/src/components/Detail/Detail.css
+++ b/orchestration/src/components/Detail/Detail.css
@@ -1,4 +1,4 @@
-.Detail {
+.Detail  {
     width: 200px;
     padding: 16px;
     text-align: center;
@@ -7,8 +7,15 @@
     margin: 10px;
     box-sizing: border-box;
     cursor: pointer;
+    flex: 1 1 auto;
 }
 
+
+
 .Details {
-    display: inline-flex;
+    display: flex;
+
+
 }
+
+
