--- a/orchestration/src/components/DateRangePicker/DatePicker.css
+++ b/orchestration/src/components/DateRangePicker/DatePicker.css
@@ -1,4 +1,6 @@
 input {
+    margin-left: 30px;
+    margin-right: 30px;
     font-size: 13px;
     border-radius: 4px;
     box-shadow: inset 0 2px 2px #e9e9e9;
@@ -12,13 +14,20 @@ input:focus {
 
 
 .DatePicker {
+    padding: 30px;
     display: inline-flex;
-    align-content: center;
+    align-content: left;
     height: 37px;
 
 }
 
 .DatePickerLabel {
     padding-top: 4px;
+}
+
+.DatePickerInput {
+    margin-left: 10px;
+    margin-right: 30px;
+
 }
 
