--- a/orchestration/src/components/Cluster/Cluster.css
+++ b/orchestration/src/components/Cluster/Cluster.css
@@ -1,13 +1,16 @@
-.Test  {
+.Cluster  {
+    width: 30px;
     margin: 5px;
-    padding: 5px;
+    writing-mode: vertical-rl;
+    justify-content:center;
+    align-items:center;
     text-align: center;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     box-sizing: border-box;
-    cursor: pointer;
     background-color: white;
-    flex-grow: 1
+
+
 }
 
 
