--- a/orchestration/src/components/FullOrchestrationRow/FullOrchestrationRow.css
+++ b/orchestration/src/components/FullOrchestrationRow/FullOrchestrationRow.css
@@ -1,3 +1,24 @@
 .FullOrchestrationRow {
+    width: 95%;
+    display: flex;
+    padding: 15px;
+    text-align: center;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    margin: 10px;
+    box-sizing: border-box;
+    background-color: beige;
+
+}
+
+.Orchestration {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.OrchestrationCluster {
     display: flex;
 }
+
+
