--- a/orchestration/src/components/OrchestrationType/OrchestrationType.css
+++ b/orchestration/src/components/OrchestrationType/OrchestrationType.css
@@ -1,21 +1,12 @@
-.Detail  {
-    width: 200px;
-    padding: 16px;
+.OrchestrationType  {
+    display: flex;
+    margin: 5px;
+    padding: 5px;
     text-align: center;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
-    margin: 10px;
     box-sizing: border-box;
     cursor: pointer;
-    flex: 1 1 auto;
+    background-color: white;
 }
-
-
-
-.Details {
-    display: flex;
-
-
-}
-
 
