--- a/orchestration/src/components/Node/Node.css
+++ b/orchestration/src/components/Node/Node.css
@@ -1,7 +1,7 @@
 .Node  {
-    margin: 5px;
+    margin: 3px;
     padding: 5px;
-    text-align: center;
+    max-width: 200px;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     box-sizing: border-box;
@@ -9,6 +9,53 @@
     background-color: white;
     flex-grow: 1
 }
+
+
+
+
+#cluster_name  {
+    font-weight: 500;
+    width: 100%;
+    text-align: right;
+    font-size: 17px;
+
+}
+
+.Node .FirstRow, .SecondRow {
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.Node .btn {
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    padding: 0px 7px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
+/* Blue */
+.Node .info {
+    border-color: #aeaeae;
+    color: black;
+}
+
+.Node .info:hover {
+    background: #808080;
+    color: white;
+}
+
+.Node #detail {
+    margin-left: 5px;
+}
+
+
 
 
 
