--- a/orchestration/src/components/Test/Test.css
+++ b/orchestration/src/components/Test/Test.css
@@ -1,6 +1,7 @@
 .Test  {
-    margin: 5px;
-    padding: 5px;
+    margin: 3px;
+    max-width: 200px;
+    min-width: 140px;
     text-align: center;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
