--- a/orchestration/src/components/DateRangePicker/DatePicker.css
+++ b/orchestration/src/components/DateRangePicker/DatePicker.css
@@ -14,10 +14,8 @@ input:focus {
 
 
 .DatePicker {
-    padding: 30px;
-    display: inline-flex;
-    align-content: left;
-    height: 37px;
+    padding: 5px;
+    display: flex;
 
 }
 
