--- a/orchestration/src/components/Node/Node.css
+++ b/orchestration/src/components/Node/Node.css
@@ -1,50 +1,32 @@
 .Node  {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin: 3px;
     padding: 5px;
-    max-width: 200px;
+    width: 210px;
     border: 1px solid #eee;
     box-shadow: 0 2px 3px #ccc;
     box-sizing: border-box;
     cursor: pointer;
     background-color: white;
-    flex-grow: 1
 }
 
 
-
-
-#cluster_name  {
+.Node #cluster_name  {
+    margin: 0px 5px 0px 5px;
     font-weight: 500;
-    width: 100%;
-    text-align: right;
     font-size: 15px;
 
 }
 
 #node_type  {
     font-weight: 500;
-    text-align: right;
     font-size: 15px;
     margin-left: 5px;
 
 }
 
-
-
-
-.Node .FirstRow, .SecondRow {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.Node .FirstRow {
-    margin: 5px 5px 5px 5px
-}
-
-.Node .SecondRow {
-    margin: 10px 5px 5px 5px
-}
 
 .Node .btn {
     border-radius: 5px;
