--- a/http--01-starting-setup/src/containers/Blog/Blog.css
+++ b/http--01-starting-setup/src/containers/Blog/Blog.css
@@ -23,6 +23,30 @@
 .Blogs a.my-active{
     color: #fa923f;
 }
+.Blogs ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.Blogs li {
+    display: inline-block;
+    margin: 20px;
+}
+
+.Blogs a {
+    text-decoration: none;
+    color: black;
+}
+
+.Blogs a:hover,
+.Blogs a:active,
+.Blogs a.active,
+.Blogs a.my-active{
+    color: #fa923f;
+}
 
 
 
