--- a/orchestration/src/components/Credentials/Credentials.css
+++ b/orchestration/src/components/Credentials/Credentials.css
@@ -1,56 +1,69 @@
 
 .credentials {
-    margin: 5px;
+    margin: 5px 5px 40px 5px;
 }
 
 .credentialContainer {
-    float: left;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
+
 .username {
-    margin-right: 10px;
-    min-width: 100px;
+    width: 10%;
 
 }
 
 .usernameLabel {
-    min-width: 200px;
 
 }
 
 .usernameInput {
-    min-width: 200px;
+
 
 }
 
 .password {
-    min-width: 200px;
+    width: 10%;
 
 }
 
 .passwordLabel {
-    min-width: 200px;
+
 
 }
 
 .passwordInput {
-    min-width: 200px;
 
+
+}
+
+.radios {
+
+    width: 20%;
+
+}
+
+.servers {
+    width: 30%
+
+}
+
+.okButton {
+    width: auto;
+    margin-top: 23px;
 }
 
 legend {
     font-size: 20px;
-    width:auto;
+    width: auto;
 }
 
 fieldset {
-    width: fit-content;
     border: 1px solid gray;
     padding: 1em;
     font-family: Arial;
 }
-
 
 /*return (*/
 /*<div className="Credentials">*/
