--- a/orchestration/src/components/Credentials/Credentials.css
+++ b/orchestration/src/components/Credentials/Credentials.css
@@ -10,7 +10,6 @@
 }
 
 .username {
-    width: 10%;
 
 }
 
@@ -24,7 +23,7 @@
 }
 
 .password {
-    width: 10%;
+
 
 }
 
@@ -38,20 +37,19 @@
 
 }
 
-.radios {
+.radios .btn-group  {
 
-    width: 20%;
+    margin-top: 5px;
 
 }
 
 .servers {
-    width: 30%
+
 
 }
 
 .okButton {
-    width: auto;
-    margin-top: 23px;
+    margin-top: 29px;
 }
 
 legend {
