--- a/orchestration/src/components/Credentials/Credentials.css
+++ b/orchestration/src/components/Credentials/Credentials.css
@@ -1,6 +1,7 @@
 
 .credentials {
     margin: 5px 5px 40px 5px;
+    color: rgba(0, 0, 0, 0.54);
 }
 
 .credentialContainer {
@@ -10,6 +11,7 @@
 }
 
 .username {
+    boxShadow: 'none'
 
 }
 
@@ -44,6 +46,7 @@
 }
 
 .servers {
+
 
 
 }
